# reality-sim

./: .gitignore  BRIEF.md  README.md  pyproject.toml
docs/: adding-a-universe.md  architecture.md  concepts.md  infinite-grids.md  metrics.md  protocol.md  sweeps.md
frontend/: app.js  index.html  style.css
reality_sim/: __init__.py  analysis.py  chunked.py  engine.py  lawset.py  lawsets.py  metrics.py  rulespace.py  server.py  sweep.py
